--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
 </script>
 </head>
   <body class="text-white">
+    <div id="star-bg">
+      <div id="stars1"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+      <div id="shooting-stars">
+          <div class="star"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+          <div class="star"></div>
+      </div>
+  </div>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
